--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@keyframes pulseslow {
+  0%, 100% {
+    opacity: .8;
+  }
+  50% {
+    opacity: .7;
+  }
+}
+
 .nav {
   z-index: 9999;
 }
