--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @keyframes pulseslow {
-  0%, 100% {
-    opacity: .8;
+  0%,
+  100% {
+    opacity: 0.8;
   }
   50% {
-    opacity: .7;
+    opacity: 0.7;
   }
 }
 
